# os-client-config

./: .gitreview  .pre-commit-config.yaml  .zuul.yaml  CONTRIBUTING.rst  README.rst  lower-constraints.txt  pyproject.toml  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
doc/: requirements.txt
doc/source/: conf.py  index.rst
doc/source/install/: index.rst
doc/source/user/: configuration.rst  network-config.rst  releasenotes.rst  using.rst  vendor-support.rst
os_client_config/: __init__.py  cloud_config.py  config.py  constructors.json  constructors.py  defaults.py  exceptions.py
os_client_config/tests/: base.py  test_cloud_config.py  test_config.py  test_environ.py  test_import_vendors.py  test_init.py
os_client_config/vendors/: betacloud.json
releasenotes/notes/: fix-vendor-import-ebd4ade0d5c17146.yaml  goodbye-python2-40feeeb4be3e06c5.yaml  thin-shim-62c8e6f6942b83a5.yaml
releasenotes/source/: conf.py  index.rst
tools/: keystone_version.py  nova_version.py  tox_install.sh
